--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,8 +56,13 @@ jobs:
         run: ./$EXE_NAME $INPUT_FILES $OUTPUT_FILES
         #        run: ./$EXE_NAME
 
+      - name: Run tests
+        working-directory: ${{runner.workspace}}/build
+        shell: bash
+        run: ./$EXE_NAME
+
       - name: Copy output files to artifact directory
-       working-directory: ${{runner.workspace}}/build
+        working-directory: ${{runner.workspace}}/build
         run: |
           mkdir artifacts
           for f in $OUTPUT_FILES
